# gdbfrontend-renewed

./: README.md  pyproject.toml  test.c
gdbfrontend/: main.py  views.py
gdbfrontend/static/: script.js  styles.css
gdbfrontend/templates/: index.html
