[tool.poetry]
name = "gdbfrontend-renewed"
version = "0.1.0"
description = ""
authors = ["tr1angular <toro_75@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
pygdbmi = "^0.11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
